--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,18 +25,17 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/title_main_activity"
-            android:launchMode="singleTask"
+            />
+        <activity
+            android:name=".DetailsActivity"
+            android:label="@string/title_details_activity"
+            android:parentActivityName=".MainActivity"
             />
 
         <activity
             android:name=".SampleActivity"
             android:label="@string/title_sample_activity"
             android:parentActivityName=".MainActivity"
-            />
-
-        <activity
-            android:name=".CollectionActivity"
-            android:label="@string/title_collection_activity"
             />
 
         <activity
