--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,9 +28,11 @@
             android:label="@string/title_main_activity"
             />
         <activity
+            android:name=".RecycleViewActivity"
+            android:label="@string/title_main_activity"
+            />
+        <activity
             android:name=".DetailsActivity"
-            android:label="@string/title_details_activity"
-            android:parentActivityName=".MainActivity"
             />
 
     </application>
