--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,11 @@
         <activity
             android:name=".LoginActivity"
             android:label="@string/title_login_activity"/>
+
+        <activity
+            android:name=".FragmentWithActivity"
+            android:label="@string/title_fragment_with_activity"/>
+
         <activity
             android:name=".VkLoginActivity"
             android:label="@string/title_vk_login_activity"/>
