some fix design and fix, add api

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,8 +22,7 @@
             android:label="@string/title_login_activity"/>
 
         <activity
-            android:name=".FragmentWithActivity"
-            android:label="@string/title_fragment_with_activity"/>
+            android:name=".FragmentWithActivity"/>
 
         <activity
             android:name=".VkLoginActivity"
