--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,9 @@
         android:name=".CoreApplication">
         <activity
             android:name=".StartActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:launchMode="standard"
+            android:screenOrientation="fullSensor">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -19,16 +21,22 @@
         </activity>
         <activity
             android:name=".LoginActivity"
+            android:launchMode="standard"
+            android:screenOrientation="fullSensor"
             android:label="@string/title_login_activity"/>
 
         <activity
-            android:name=".FragmentWithActivity"/>
-
+            android:name=".FragmentWithActivity"
+            android:launchMode="standard"
+            android:screenOrientation="fullSensor"/>
         <activity
             android:name=".VkLoginActivity"
+            android:launchMode="standard"
             android:label="@string/title_vk_login_activity"/>
         <activity
             android:name=".MainActivity"
+            android:launchMode="standard"
+            android:screenOrientation="fullSensor"
             android:label="@string/title_main_activity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -36,14 +44,14 @@
             </intent-filter>
         </activity>
 
-        <activity
-            android:name=".RecycleViewActivity"
-            android:label="@string/title_main_activity"
-            />
         <!-- Source - http://developer.android.com/training/implementing-navigation/ancestral.html-->
         <activity
             android:name=".DetailsActivity"
             android:parentActivityName=".MainActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
             <!-- Parent activity meta-data to support 4.0 and lower -->
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
