--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.vlik1234.tmdb" >
+    package="org.tmdb.vlik1234">
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -8,9 +8,9 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
-        android:name=".CoreApplication">
+        android:name="org.tmdb.CoreApplication">
         <activity
-            android:name=".StartActivity"
+            android:name="org.tmdb.StartActivity"
             android:label="@string/app_name"
             android:launchMode="standard"
             android:screenOrientation="fullSensor">
@@ -20,21 +20,34 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".LoginActivity"
+            android:name="org.tmdb.LoginActivity"
             android:launchMode="standard"
             android:screenOrientation="fullSensor"
             android:label="@string/title_login_activity"/>
-
         <activity
-            android:name=".FragmentWithActivity"
+            android:name="org.tmdb.SearchActivity"
+            android:launchMode="singleTask"
+            android:screenOrientation="fullSensor"
+            android:parentActivityName="org.tmdb.FragmentWithActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+            <!-- Parent activity meta-data to support 4.0 and lower -->
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="org.tmdb.FragmentWithActivity" />
+        </activity>
+        <activity
+            android:name="org.tmdb.FragmentWithActivity"
             android:launchMode="standard"
             android:screenOrientation="fullSensor"/>
         <activity
-            android:name=".VkLoginActivity"
+            android:name="org.tmdb.VkLoginActivity"
             android:launchMode="standard"
             android:label="@string/title_vk_login_activity"/>
         <activity
-            android:name=".MainActivity"
+            android:name="org.tmdb.MainActivity"
             android:launchMode="standard"
             android:screenOrientation="fullSensor"
             android:label="@string/title_main_activity">
@@ -46,8 +59,8 @@
 
         <!-- Source - http://developer.android.com/training/implementing-navigation/ancestral.html-->
         <activity
-            android:name=".DetailsActivity"
-            android:parentActivityName=".MainActivity">
+            android:name="org.tmdb.DetailsActivity"
+            android:parentActivityName="org.tmdb.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
                 <category android:name="android.intent.category.DEFAULT" />
@@ -55,7 +68,7 @@
             <!-- Parent activity meta-data to support 4.0 and lower -->
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.vlik1234.tmdb.MainActivity" />
+                android:value="org.tmdb.MainActivity" />
             </activity>
 
     </application>
