detail activity design like google play first version

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,11 +25,23 @@
             android:screenOrientation="fullSensor"
             android:label="@string/title_login_activity"/>
         <activity
+            android:name="org.tmdb.VkLoginActivity"
+            android:launchMode="standard"
+            android:label="@string/title_vk_login_activity"/>
+        <activity
             android:name="org.tmdb.ReturnActivity"
             android:label="@string/app_name"
             android:launchMode="standard"
             android:screenOrientation="fullSensor">
         </activity>
+        <activity
+            android:name="org.tmdb.MainScreenActivity"
+            android:launchMode="standard"
+            android:screenOrientation="fullSensor"/>
+        <activity
+            android:name="org.tmdb.AlphaActivity"
+            android:launchMode="standard"
+            android:screenOrientation="fullSensor"/>
         <activity
             android:name="org.tmdb.SearchActivity"
             android:launchMode="standard"
@@ -44,14 +56,6 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="org.tmdb.MainScreenActivity" />
         </activity>
-        <activity
-            android:name="org.tmdb.MainScreenActivity"
-            android:launchMode="standard"
-            android:screenOrientation="fullSensor"/>
-        <activity
-            android:name="org.tmdb.VkLoginActivity"
-            android:launchMode="standard"
-            android:label="@string/title_vk_login_activity"/>
         <!-- Source - http://developer.android.com/training/implementing-navigation/ancestral.html-->
         <activity
             android:name="org.tmdb.DetailsActivity"
