--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="org.tmdb.vlik1234">
+    package="github.tmdb">
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -8,9 +8,9 @@
         android:icon="@drawable/ic_tmdb"
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
-        android:name="org.tmdb.CoreApplication">
+        android:name="github.tmdb.CoreApplication">
         <activity
-            android:name="org.tmdb.StartActivity"
+            android:name="github.tmdb.app.StartActivity"
             android:label="@string/app_name"
             android:launchMode="standard"
             android:screenOrientation="fullSensor">
@@ -20,33 +20,33 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="org.tmdb.LoginActivity"
+            android:name="github.tmdb.app.LoginActivity"
             android:launchMode="standard"
             android:screenOrientation="fullSensor"
             android:label="@string/title_login_activity"/>
         <activity
-            android:name="org.tmdb.VkLoginActivity"
+            android:name="github.tmdb.app.VkLoginActivity"
             android:launchMode="standard"
             android:label="@string/title_vk_login_activity"/>
         <activity
-            android:name="org.tmdb.ReturnActivity"
+            android:name="github.tmdb.app.ReturnActivity"
             android:label="@string/app_name"
             android:launchMode="standard"
             android:screenOrientation="fullSensor">
         </activity>
         <activity
-            android:name="org.tmdb.MainScreenActivity"
+            android:name="github.tmdb.app.MainScreenActivity"
             android:launchMode="standard"
             android:screenOrientation="fullSensor"/>
         <activity
-            android:name="org.tmdb.AlphaActivity"
+            android:name="github.tmdb.app.AlphaActivity"
             android:launchMode="standard"
             android:screenOrientation="fullSensor"/>
         <activity
-            android:name="org.tmdb.SearchActivity"
+            android:name="github.tmdb.app.SearchActivity"
             android:launchMode="standard"
             android:screenOrientation="fullSensor"
-            android:parentActivityName="org.tmdb.MainScreenActivity">
+            android:parentActivityName="github.tmdb.app.MainScreenActivity">
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
                 <category android:name="android.intent.category.DEFAULT" />
@@ -54,12 +54,12 @@
             <!-- Parent activity meta-data to support 4.0 and lower -->
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="org.tmdb.MainScreenActivity" />
+                android:value="github.tmdb.app.MainScreenActivity" />
         </activity>
         <!-- Source - http://developer.android.com/training/implementing-navigation/ancestral.html-->
         <activity
-            android:name="org.tmdb.DetailsActivity"
-            android:parentActivityName="org.tmdb.ReturnActivity">
+            android:name="github.tmdb.app.DetailsActivity"
+            android:parentActivityName="github.tmdb.app.ReturnActivity">
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
                 <category android:name="android.intent.category.DEFAULT" />
@@ -67,7 +67,7 @@
             <!-- Parent activity meta-data to support 4.0 and lower -->
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="org.tmdb.ReturnActivity" />
+                android:value="github.tmdb.app.MainScreenActivity" />
             </activity>
 
     </application>
