--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,4 +24,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:21.0.3'
     compile 'com.android.support:recyclerview-v7:21.0.2'
     compile "com.android.support:cardview-v7:21.0.2"
+    compile 'com.android.support:design:22.2.1'
+    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.3'
 }
