--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,7 @@
             android:name="github.tmdb.app.ReturnActivity"
             android:label="@string/app_name"
             android:launchMode="standard"
+            android:theme="@android:style/Theme.Panel"
             android:screenOrientation="fullSensor">
         </activity>
         <activity
