--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,39 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="github.tmdb">
-    <uses-permission android:name="android.permission.INTERNET" />
+<manifest package="github.tmdb"
+          xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
+        android:name="github.tmdb.CoreApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_tmdb"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme"
-        android:name="github.tmdb.CoreApplication">
+        android:theme="@style/AppTheme">
         <activity
             android:name="github.tmdb.app.StartActivity"
             android:label="@string/app_name"
             android:launchMode="standard"
             android:screenOrientation="fullSensor">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
         <activity
             android:name="github.tmdb.app.LoginActivity"
+            android:label="@string/title_login_activity"
             android:launchMode="standard"
-            android:screenOrientation="fullSensor"
-            android:label="@string/title_login_activity"/>
+            android:screenOrientation="fullSensor"/>
         <activity
             android:name="github.tmdb.app.VkLoginActivity"
-            android:launchMode="standard"
-            android:label="@string/title_vk_login_activity"/>
+            android:label="@string/title_vk_login_activity"
+            android:launchMode="standard"/>
         <activity
             android:name="github.tmdb.app.ReturnActivity"
             android:label="@string/app_name"
             android:launchMode="standard"
-            android:theme="@android:style/Theme.Panel"
-            android:screenOrientation="fullSensor">
+            android:screenOrientation="fullSensor"
+            android:theme="@android:style/Theme.Panel">
         </activity>
         <activity
             android:name="github.tmdb.app.MainScreenActivity"
@@ -46,30 +47,35 @@
         <activity
             android:name="github.tmdb.app.SearchActivity"
             android:launchMode="standard"
-            android:screenOrientation="fullSensor"
-            android:parentActivityName="github.tmdb.app.MainScreenActivity">
+            android:parentActivityName="github.tmdb.app.MainScreenActivity"
+            android:screenOrientation="fullSensor">
             <intent-filter>
-                <action android:name="android.intent.action.SEARCH" />
-                <category android:name="android.intent.category.DEFAULT" />
+                <action android:name="android.intent.action.SEARCH"/>
+                <category android:name="android.intent.category.DEFAULT"/>
             </intent-filter>
             <!-- Parent activity meta-data to support 4.0 and lower -->
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="github.tmdb.app.MainScreenActivity" />
+                android:value="github.tmdb.app.MainScreenActivity"/>
         </activity>
         <!-- Source - http://developer.android.com/training/implementing-navigation/ancestral.html-->
         <activity
             android:name="github.tmdb.app.DetailsActivity"
             android:parentActivityName="github.tmdb.app.ReturnActivity">
             <intent-filter>
-                <action android:name="android.intent.action.SEARCH" />
-                <category android:name="android.intent.category.DEFAULT" />
+                <action android:name="android.intent.action.SEARCH"/>
+                <category android:name="android.intent.category.DEFAULT"/>
             </intent-filter>
             <!-- Parent activity meta-data to support 4.0 and lower -->
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="github.tmdb.app.MainScreenActivity" />
-            </activity>
+                android:value="github.tmdb.app.MainScreenActivity"/>
+        </activity>
+
+        <activity
+            android:name="github.tmdb.app.SettingsActivity"
+            android:launchMode="standard"
+            android:screenOrientation="fullSensor"/>
 
     </application>
 
