--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,8 +9,8 @@ android {
         applicationId "github.tmdb"
         minSdkVersion 16
         targetSdkVersion 23
-        versionCode 8
-        versionName "1.5"
+        versionCode 10
+        versionName "1.7"
     }
     buildTypes {
         release {
@@ -22,6 +22,7 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile project(':android_xcore:xcore-library:xcore')
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:recyclerview-v7:23.1.1'
     compile "com.android.support:cardview-v7:23.1.1"
