--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
-        android:name="github.tmdb.CoreApplication"
+        android:name="github.tmdb.Application"
         android:allowBackup="true"
         android:icon="@drawable/ic_tmdb"
         android:label="@string/app_name"
