--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,6 @@ dependencies {
     compile "com.android.support:cardview-v7:23.1.1"
     compile 'com.android.support:design:23.1.1'
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
+    compile 'com.google.android.gms:play-services-maps:8.4.0'
+
 }
