--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
         android:name="github.tmdb.Application"
         android:allowBackup="true"
         android:icon="@drawable/ic_tmdb"
+        android:fullBackupContent="false"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <activity
@@ -41,37 +42,19 @@
             android:theme="@style/AppTheme.NoActionBar"
             android:launchMode="standard"
             android:screenOrientation="fullSensor"/>
-        <activity
-            android:name="github.tmdb.app.AlphaActivity"
-            android:launchMode="standard"
-            android:screenOrientation="fullSensor"/>
-        <activity
-            android:name="github.tmdb.app.SearchActivity"
-            android:launchMode="standard"
-            android:parentActivityName="github.tmdb.app.MainScreenActivity"
-            android:screenOrientation="fullSensor">
-            <intent-filter>
-                <action android:name="android.intent.action.SEARCH"/>
-                <category android:name="android.intent.category.DEFAULT"/>
-            </intent-filter>
-            <!-- Parent activity meta-data to support 4.0 and lower -->
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="github.tmdb.app.MainScreenActivity"/>
-        </activity>
         <!-- Source - http://developer.android.com/training/implementing-navigation/ancestral.html-->
-        <activity
-            android:name="github.tmdb.app.DetailsActivity"
-            android:parentActivityName="github.tmdb.app.MainScreenActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.SEARCH"/>
-                <category android:name="android.intent.category.DEFAULT"/>
-            </intent-filter>
-            <!-- Parent activity meta-data to support 4.0 and lower -->
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="github.tmdb.app.MainScreenActivity"/>
-        </activity>
+        <!--<activity-->
+            <!--android:name="github.tmdb.app.DetailsActivity"-->
+            <!--android:parentActivityName="github.tmdb.app.MainScreenActivity">-->
+            <!--<intent-filter>-->
+                <!--<action android:name="android.intent.action.SEARCH"/>-->
+                <!--<category android:name="android.intent.category.DEFAULT"/>-->
+            <!--</intent-filter>-->
+            <!--&lt;!&ndash; Parent activity meta-data to support 4.0 and lower &ndash;&gt;-->
+            <!--<meta-data-->
+                <!--android:name="android.support.PARENT_ACTIVITY"-->
+                <!--android:value="github.tmdb.app.MainScreenActivity"/>-->
+        <!--</activity>-->
 
         <activity
             android:name="github.tmdb.app.SettingsActivity"
