--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
           xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
 
     <application
         android:name="github.tmdb.Application"
@@ -11,6 +12,11 @@
         android:fullBackupContent="false"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/google_maps_key"/>
+
         <activity
             android:name="github.tmdb.app.StartActivity"
             android:label="@string/app_name"
@@ -58,6 +64,11 @@
 
         <activity
             android:name="github.tmdb.app.SettingsActivity"
+            android:launchMode="standard"
+            android:screenOrientation="fullSensor"/>
+
+        <activity
+            android:name="github.tmdb.app.MapActivity"
             android:launchMode="standard"
             android:screenOrientation="fullSensor"/>
 
